[package]
name = "iced_table"
version = "0.13.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A table widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_table"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[dependencies]
iced = { version = "0.14.0-dev", features = [
    "lazy",
    "debug",
    "advanced",
] }

[package.metadata.docs.rs]
all-features = true

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "aa633f6832c93d81fc829bcd351b369f0aada282" }
